--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -166,7 +166,7 @@
                   <button
                     class="btn"
                     onclick="location.href='/dashboard'">
-                    Add More Products
+                    Add Products
                   </button>
                 </div>
               </div>
