--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,11 +127,8 @@
               </div>
             </div>
             <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
-              <span class="user-menu d-block d-lg-none"
-                ><i
-                  class="anm anm-user-al"
-                  aria-hidden="true"></i
-              ></span>
+              <% if (username && name) { %>
+              <!-- Content for logged-in users -->
               <ul class="customer-links list-inline">
                 <li>
                   <a href="#"><div class="name"><%= username %></div></a>
@@ -146,6 +143,17 @@
                 </li>
                 <li><a href="/logout">Logout</a></li>
               </ul>
+              <% } else { %>
+              <!-- Content for guests -->
+              <ul class="guest-links list-inline">
+                <li>
+                  <a href="/userLogin">Login</a>
+                </li>
+                <li>
+                  <a href="/userRegister">Register</a>
+                </li>
+              </ul>
+              <% } %>
             </div>
           </div>
         </div>
