--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,55 +70,8 @@
           <div class="row">
             <div class="col-10 col-sm-8 col-md-5 col-lg-4">
               <div class="currency-picker">
-                <span class="selected-currency">USD</span>
-                <ul id="currencies">
-                  <li
-                    data-currency="INR"
-                    class="">
-                    INR
-                  </li>
-                  <li
-                    data-currency="GBP"
-                    class="">
-                    GBP
-                  </li>
-                  <li
-                    data-currency="CAD"
-                    class="">
-                    CAD
-                  </li>
-                  <li
-                    data-currency="USD"
-                    class="selected">
-                    USD
-                  </li>
-                  <li
-                    data-currency="AUD"
-                    class="">
-                    AUD
-                  </li>
-                  <li
-                    data-currency="EUR"
-                    class="">
-                    EUR
-                  </li>
-                  <li
-                    data-currency="JPY"
-                    class="">
-                    JPY
-                  </li>
-                </ul>
+                <span class="">QuickPick</span>
               </div>
-              <div class="language-dropdown">
-                <span class="language-dd">English</span>
-                <ul id="language">
-                  <li class="">German</li>
-                  <li class="">French</li>
-                </ul>
-              </div>
-              <p class="phone-no">
-                <i class="anm anm-phone-s"></i> +440 0(111) 044 833
-              </p>
             </div>
             <div
               class="col-sm-4 col-md-4 col-lg-4 d-none d-lg-none d-md-block d-lg-block">
@@ -148,9 +101,6 @@
               <ul class="guest-links list-inline">
                 <li>
                   <a href="/userLogin">Login</a>
-                </li>
-                <li>
-                  <a href="/userRegister">Register</a>
                 </li>
               </ul>
               <% } %>
