--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,6 +82,11 @@
             <div class="col-2 col-sm-4 col-md-3 col-lg-4 text-right">
               <% if (username && name) { %>
               <!-- Content for logged-in users -->
+              <span class="user-menu d-block d-lg-none"
+                ><i
+                  class="anm anm-user-al"
+                  aria-hidden="true"></i
+              ></span>
               <ul class="customer-links list-inline">
                 <li>
                   <a href="#"><div class="name"><%= username %></div></a>
