Bug Fixed, Cart Updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1877,7 +1877,7 @@
               <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="section-header text-center">
                   <h2 class="h2">New Arrivals</h2>
-                  <p>Browse the huge variety of our products</p>
+                  <h4>Browse the huge variety of our products</h4>
                 </div>
                 <div class="tabs-listing">
                   <ul class="tabs clearfix"></ul>
@@ -1966,8 +1966,8 @@
                     <div
                       class="d-flex justify-content-center align-items-center product-name">
                       <button
+                        onclick="location.href='/col'"
                         id="showCartButton"
-                        onclick="alert('Item Added to Cart')"
                         class="hover"
                         style="
                           width: auto;
@@ -1977,9 +1977,9 @@
                           font-size: 15px;
                           font-weight: 600;
                         ">
-                        Add these items to cart
+                        See More Collection
                       </button>
-                      <button
+                      <!-- <button
                         id="hide"
                         onclick="alert('Items removed from cart');"
                         class="hover"
@@ -1992,7 +1992,7 @@
                           font-weight: 600;
                         ">
                         Remove items to cart
-                      </button>
+                      </button> -->
                     </div>
                     <% } %>
                   </div>
