--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -1884,15 +1884,16 @@
                           >Don't Have Account? Sign Up</a
                         >
                         <a
+                          style="margin-bottom: 5px"
                           href="/adminLogin"
                           id="customer_register_link"
                           >Login as a Admin</a
                         >
-                        <!-- <a
-                          href="/adminL"
+                        <a
+                          href="/"
                           id="customer_register_link"
-                          >Are you a Admin? Admin's Login</a
-                        > -->
+                          >Back to Home Page</a
+                        >
                       </p>
                     </div>
                   </div>
