/wish Bug Fixed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2172,7 +2172,7 @@
                   <div class="grid-view_image">
                     <!-- start product image -->
                     <a
-                      href="/comp"
+                      href="/wish"
                       class="grid-view-item__link">
                       <!-- image -->
                       <img
@@ -2246,7 +2246,7 @@
                         <div class="compare-btn">
                           <a
                             class="compare add-to-compare"
-                            href="/comp"
+                            href="/wish"
                             title="Add to Compare">
                             <i class="icon anm anm-random-r"></i>
                           </a>
@@ -2367,7 +2367,7 @@
                         <div class="compare-btn">
                           <a
                             class="compare add-to-compare"
-                            href="/comp"
+                            href="/wish"
                             title="Add to Compare">
                             <i class="icon anm anm-random-r"></i>
                           </a>
@@ -2478,7 +2478,7 @@
                         <div class="compare-btn">
                           <a
                             class="compare add-to-compare"
-                            href="/comp"
+                            href="/wish"
                             title="Add to Compare">
                             <i class="icon anm anm-random-r"></i>
                           </a>
@@ -2589,7 +2589,7 @@
                         <div class="compare-btn">
                           <a
                             class="compare add-to-compare"
-                            href="/comp"
+                            href="/wish"
                             title="Add to Compare">
                             <i class="icon anm anm-random-r"></i>
                           </a>
@@ -2700,7 +2700,7 @@
                         <div class="compare-btn">
                           <a
                             class="compare add-to-compare"
-                            href="/comp"
+                            href="/wish"
                             title="Add to Compare">
                             <i class="icon anm anm-random-r"></i>
                           </a>
@@ -2805,7 +2805,7 @@
                         <div class="compare-btn">
                           <a
                             class="compare add-to-compare"
-                            href="/comp"
+                            href="/wish"
                             title="Add to Compare">
                             <i class="icon anm anm-random-r"></i>
                           </a>
