--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -189,7 +189,7 @@
                     <button
                       style="
                         margin-top: 10px;
-                        width: 30%;
+                        width: auto;
                         height: 5vh;
                         text-align: center;
                         cursor: pointer;
